[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BDPotentiometer"
dynamic = ["version"]
description = "BD Digital Potentiometer"
authors = [
  { name = "Anton Bondarenko", email = "bond.anton@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
  "gpiozero>=1.6.2",
]

[project.urls]
"Homepage" = "https://github.com/bond-anton/BDPotentiometer"
"Bug Tracker" = "https://github.com/bond-anton/BDPotentiometer/issues"
"Documentation" = "https://bdpotentiometer.readthedocs.io"

[project.optional-dependencies]
dev = ["gpiozero>=1.6.2", "numpy"]
test = ["flake8", "pytest", "numpy"]
lint = ["pylint"]

[tool.setuptools.dynamic]
version = {attr = "BDPotentiometer.__version__"}

[tool.mypy]
python_version = "3.9"

[[tool.mypy.overrides]]
module = ["gpiozero.*"]
ignore_missing_imports = true